--- a/platformio.ini
+++ b/platformio.ini
@@ -19,3 +19,4 @@ lib_deps =
 	adafruit/Adafruit ST7735 and ST7789 Library@^1.11.0
 	adafruit/Adafruit SPIFlash@^5.1.1
 	adafruit/SdFat - Adafruit Fork@^2.3.54
+	luni64/TeensyStep@^2.1
