--- a/platformio.ini
+++ b/platformio.ini
@@ -15,8 +15,6 @@ framework = arduino
 lib_deps = 
 	adafruit/Adafruit GFX Library@^1.12.3
 	adafruit/Adafruit BusIO@^1.17.4
-	adafruit/Adafruit Zero DMA Library@^1.1.3
 	adafruit/Adafruit ST7735 and ST7789 Library@^1.11.0
 	adafruit/Adafruit SPIFlash@^5.1.1
-	adafruit/SdFat - Adafruit Fork@^2.3.54
-	luni64/TeensyStep@^2.1
+	adafruit/Adafruit FRAM I2C@^2.0.3
