--- a/platformio.ini
+++ b/platformio.ini
@@ -18,3 +18,4 @@ lib_deps =
 	adafruit/Adafruit ST7735 and ST7789 Library@^1.11.0
 	adafruit/Adafruit SPIFlash@^5.1.1
 	adafruit/Adafruit FRAM I2C@^2.0.3
+	luni64/EncoderTool@^3.2.2
